apps/racknerd/unifi/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: unifi-route
  namespace: unifi
spec:
  parentRefs:
    - name: tls-gateway
      namespace: public-gateway
      sectionName: tls-passthrough
  hostnames:
    - "unifi-test.collazoirizarry.xyz"
  rules:
    - backendRefs:
        - name: unifi-svc
          port: 8443
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: unifi-guest-portal-route
  namespace: unifi
spec:
  parentRefs:
    - name: unifi-guest-gateway
      namespace: public-gateway
      sectionName: unifi-guest-portal
  hostnames:
    - "unifi-test.collazoirizarry.xyz"
  rules:
    - backendRefs:
        - name: unifi-svc
          port: 8843
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi-inform-route
  namespace: unifi
spec:
  parentRefs:
    - name: unifi-inform-gateway
      namespace: public-gateway
      sectionName: unifi-inform
  hostnames:
    - "unifi-test.collazoirizarry.xyz"
  rules:
    - backendRefs:
        - name: unifi-svc
          port: 8080
